--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
       <a href="https://youtu.be/pvf9jX_Ej28" class="links1"
         >Vídeo sobre Bootstrap</a
       ><br /><br />
-      <a href="#" class="links1">Voltar</a>
+      <a href="#" id="voltar">Voltar</a>
     </section>
     <script src="./js/mobile-navbar.js"></script>
   </body>
