Add borders in nav-list...

--- a/index-c.html
+++ b/index-c.html
@@ -24,11 +24,11 @@
           <div class="line3"></div>
         </div>
         <ul class="nav-list">
-          <li><a href="#HTML">Html</a></li>
-          <li><a href="#CSS">Css</a></li>
-          <li><a href="#JAVASCRIPT">JavaScript</a></li>
-          <li><a href="#PYTHON">Python</a></li>
-          <li><a href="#BOOTSTRAP">Bootstrap</a></li>
+          <li><a href="#HTML" class="text-link">Html</a></li>
+          <li><a href="#CSS" class="text-link">Css</a></li>
+          <li><a href="#JAVASCRIPT" class="text-link">JavaScript</a></li>
+          <li><a href="#PYTHON" class="text-link">Python</a></li>
+          <li><a href="#BOOTSTRAP" class="text-link">Bootstrap</a></li>
         </ul>
       </nav>
     </header>
